--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 "editors/xcode.png",
                 "editors/helix.png",
                 "editors/frontpage.png",
+                "editors/kakoune.png",
             ];
 
         </script>
